--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="col-md-12 text-white">
                     <h1>DOWNLOAD THE <b> BORROWBOX</b>  APP NOW</h1>
 
-                    <div class="text-white d-flex flex-column justify-content-evenly align-items-center text-center pt-5">
+                    <div class="text-white d-flex flex-collumn justify-content-evenly align-items-center text-center pt-5">
                         <div class="col">
                             <p><b>STEP ONE</b></p>
                             <p>Join your local public library</p>
@@ -138,7 +138,7 @@
                 <div class="col-md-12 pt-5 text-center">
                     <h2>READ/LISTEN 24/7 ON THESE DEVICES</h2>
 
-                    <div class="d-flex flex-column justify-content-evenly align-items-end text-center pt-5">
+                    <div class="d-flex flex-collumn justify-content-evenly align-items-end text-center pt-5">
                         <div class="col">
                            <img width="40%" src="https://www.borrowbox.com/img/iPhoneIcon.png" alt="" class="img-fluid">
                             <p>iPhone</p>
@@ -182,7 +182,7 @@
         <div class="container">
             <div class="row p-3 justify-content-center align-items-center">
                 <div class="col-md-12">
-                    <div class="d-flex flex-column justify-content-center align-items-center text-center">
+                    <div class="d-flex flex-collumn justify-content-center align-items-center text-center">
                         <a><p>Copyright © 2012-2021 Bolinda Digital Pty Ltd. All Rights Reserved.</p></a>
                         <a href="#"><u>Website Accessibility</u></a>
                         <a href="#"><u>App Accessibility</u> </a>
